--- a/Campus Frontend/src/scss/style.scss
+++ b/Campus Frontend/src/scss/style.scss
@@ -13,3 +13,10 @@
 
 // If you want to add custom CSS you can put it here
 @import "custom";
+
+/* styles.css */
+.customTableContainer {
+    background-color: var(--cui-dark-bg-subtle);
+    color: white;
+  }
+  
